==> Joson123/Baby-cradle/婴儿摇篮/婴儿摇篮视频版/HARDWARE/KEY/key.c <==
#include "delay.h"
#include "key.h"
#include "sys.h"
#include "led.h"
#include "gizwits_product.h"
#include "stm32f10x_exti.h"
#include "usart.h"
//
void keyInit(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    EXTI_InitTypeDef EXTI_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOE, ENABLE); //使能PORTA,PORTE时钟
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE); //使能复用功能时钟
    GPIO_InitStructure.GPIO_Pin  = GPIO_Pin_4 | GPIO_Pin_3; //KEY0-KEY1
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU; //设置成上拉输入
    GPIO_Init(GPIOE, &GPIO_InitStructure);//初始化GPIOE4,3
    //初始化 WK_UP-->GPIOA.0      下拉输入
    GPIO_InitStructure.GPIO_Pin  = GPIO_Pin_0;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPD; //PA0设置成输入，默认下拉
    GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化GPIOA.0
    //GPIOE.3     中断线以及中断初始化配置 下降沿触发 //KEY1
    GPIO_EXTILineConfig(GPIO_PortSourceGPIOE, GPIO_PinSource3);
    EXTI_InitStructure.EXTI_Line = EXTI_Line3;
    EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
    EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
    EXTI_Init(&EXTI_InitStructure);     //根据EXTI_InitStruct中指定的参数初始化外设EXTI寄存器
    //GPIOE.4     中断线以及中断初始化配置  下降沿触发  //KEY0
    GPIO_EXTILineConfig(GPIO_PortSourceGPIOE, GPIO_PinSource4);
    EXTI_InitStructure.EXTI_Line = EXTI_Line4;
    EXTI_Init(&EXTI_InitStructure);     //根据EXTI_InitStruct中指定的参数初始化外设EXTI寄存器
    //GPIOA.0     中断线以及中断初始化配置 上升沿触发 PA0  WK_UP
    GPIO_EXTILineConfig(GPIO_PortSourceGPIOA, GPIO_PinSource0);
    EXTI_InitStructure.EXTI_Line = EXTI_Line0;
    EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
    EXTI_Init(&EXTI_InitStructure);     //根据EXTI_InitStruct中指定的参数初始化外设EXTI寄存器
    NVIC_InitStructure.NVIC_IRQChannel = EXTI0_IRQn;            //使能按键WK_UP所在的外部中断通道
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x02;    //抢占优先级2，
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;                   //子优先级3
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;                             //使能外部中断通道
    NVIC_Init(&NVIC_InitStructure);
    NVIC_InitStructure.NVIC_IRQChannel = EXTI3_IRQn;            //使能按键KEY1所在的外部中断通道
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x02;    //抢占优先级2
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x01;                   //子优先级1
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;                             //使能外部中断通道
    NVIC_Init(&NVIC_InitStructure);       //根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器
    NVIC_InitStructure.NVIC_IRQChannel = EXTI4_IRQn;            //使能按键KEY0所在的外部中断通道
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x02;    //抢占优先级2
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x02;                   //子优先级0
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;                             //使能外部中断通道
    NVIC_Init(&NVIC_InitStructure);       //根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器
}


//外部中断0服务程序
void EXTI0_IRQHandler(void)
{
    delay_ms(10);//消抖
    if (WK_UP == 1)      //WK_UP按键
    {
        gizwitsSetMode(WIFI_RESET_MODE);
        LED1 = 1;
        LED0 = 0;
        printf("wifi网络重置\r\n");
    }
    EXTI_ClearITPendingBit(EXTI_Line0); //清除LINE0上的中断标志位
}


//外部中断3服务程序
void EXTI3_IRQHandler(void)
{
    delay_ms(10);//消抖
    if (KEY1 == 0) //按键KEY1
    {
        gizwitsSetMode(WIFI_AIRLINK_MODE);
        LED1 = 0;
        LED0 = 1;
        printf("WIFI_AIRLINK_MODE配置\r\n");
    }
    EXTI_ClearITPendingBit(EXTI_Line3);  //清除LINE3上的中断标志位
}

void EXTI4_IRQHandler(void)
{
    delay_ms(10);//消抖
    if (KEY0 == 0) //按键KEY0
    {
        gizwitsSetMode(WIFI_SOFTAP_MODE);
        LED1 = 0;
        LED0 = 1;
        printf("WIFI_SOFTAP_MODE配置\n");
    }
    EXTI_ClearITPendingBit(EXTI_Line4);  //清除LINE4上的中断标志位
}
